[gd_scene load_steps=2 format=3 uid="uid://bdma1peds6uu1"]

[ext_resource type="Script" path="res://Scripts/Dash.gd" id="1_wdpes"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_wdpes")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GhostSpawn" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="GhostSpawn" to="." method="_on_ghost_spawn_timeout"]
